--- a/Producer/css/style.css
+++ b/Producer/css/style.css
@@ -142,6 +142,12 @@ footer p {
     text-align: center;
 }
 
+.card:hover {
+    cursor: pointer;
+    background-color: rgb(160, 165, 169);
+    transition: 1s;
+}
+
 .card img {
     width: 150px;
     height: 150px;
@@ -201,6 +207,7 @@ footer p {
     font-size: 14px;
     margin-top: 2%;
     margin-left: 8%;
+    margin-right: 5%;
 }
 
 .my-button:hover {
