--- a/Producer/css/add-consumer.css
+++ b/Producer/css/add-consumer.css
@@ -128,76 +128,45 @@ footer p {
     transition: 1s;
     cursor: pointer;
 }
-section {
-    margin: 2%;
-    display: flex;
-    justify-content: space-between;
-}
 
-section img {
-    height: 200px;
-    width: 200px;
+form {
+    width: 50%;
+    margin: 50px auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #fff;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
 }
-
-section li {
-    text-align: left;
+h2 {
+    margin-top: 0;
+    text-align: center;
+    color: #444;
 }
-
-section div {
+label, input[type="file"] {
+    display: block;
+    margin-bottom: 10px;
+    color: #444;
+}
+input[type="text"], input[type="email"], input[type="tel"], input[type="file"] {
+    width: 90%;
     padding: 10px;
-}
-
-.features {
-    margin-right: 10px;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
-}
-
-.users {
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
-}
-
-.users-container {
-    display: flex;
-}
-
-.user-card {
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
-}
-
-.users img {
-    height: 200px;
-    width: 200px;
-}
-
-.set {
-    width: 30%;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
-}
-
-button {
+    border: 1px solid #ccc;
     border-radius: 5px;
-    width: 30%;
-    height: 40px;
-    background-color: white;
-    border-color: rgba(128, 128, 128, 0.416);
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+    background-color: #f9f9f9;
+    color: #555;
+    font-size: 16px;
 }
-
-button:hover {
+input[type="submit"] {
+    background-color: #4CAF50;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
     cursor: pointer;
-    background-color: gray;
-    color: white;
-    transition: 0.5s;
+    transition: background-color 0.3s ease;
 }
-
-.set li {
-    display: flex;
-    justify-content: space-between;
-    margin: 10px;
-}
-
-input {
-    border-color: rgba(128, 128, 128, 0.416);
-    border-radius: 5px;
+input[type="submit"]:hover {
+    background-color: #3e8e41;
 }
 
