--- a/Producer/css/add-consumer.css
+++ b/Producer/css/add-consumer.css
@@ -143,7 +143,7 @@ h2 {
     text-align: center;
     color: #444;
 }
-label, input[type="file"] {
+label{
     display: block;
     margin-bottom: 10px;
     color: #444;
@@ -157,6 +157,11 @@ input[type="text"], input[type="email"], input[type="tel"], input[type="file"] {
     color: #555;
     font-size: 16px;
 }
+
+input[type="file"] {
+    margin-bottom: 10px;
+}
+
 input[type="submit"] {
     background-color: #4CAF50;
     color: #fff;
