--- a/Producer/css/style.css
+++ b/Producer/css/style.css
@@ -120,7 +120,7 @@ footer p {
     padding: 10%;
 }
 
-.users:hover {
+.rooms:hover {
     cursor: pointer;
     background-color: rgb(160, 165, 169);
     transition: 1s;
