Revert "php added to producer home page, device page, producer room page and users page and users section deleted"
This reverts commit ecd4b31714204dab89a63bea5901b00c52598f30.

--- a/Producer/css/style.css
+++ b/Producer/css/style.css
@@ -120,7 +120,7 @@ footer p {
     padding: 10%;
 }
 
-.rooms:hover {
+.users:hover {
     cursor: pointer;
     background-color: rgb(160, 165, 169);
     transition: 1s;
