--- a/Consumer/kitchen.css
+++ b/Consumer/kitchen.css
@@ -710,3 +710,12 @@ ul.nav.nav-tabs li a:focus, ul.nav.nav-tabs li a:active {
       flex-basis: calc(10% - 50px);
     }
   } 
+
+  #living-room-light-value {
+    text-align: center;
+    display: block;
+    margin: 0 auto;
+    font-size: 40px;
+    color: rgb(51, 96, 188);
+    font-family: 'Open Sans', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
