--- a/Consumer/homepage.css
+++ b/Consumer/homepage.css
@@ -193,13 +193,14 @@ a:focus {
 
 #box{
    
-  width: 800px;
+  width: 1200px;
   height: 200px;
   background-color: rgba(248, 242, 242, 0.85);
   margin: auto;
   border-radius:20px;
   box-shadow: 5px 5px 6px rgb(18, 18, 18);
   margin-top: 40px;
+  margin-left: -100px;
   padding: 0px; 
          
 } 
@@ -364,7 +365,8 @@ ul.nav.nav-tabs li a:focus, ul.nav.nav-tabs li a:active {
 .container_box {
   display: flex;
   flex-wrap: wrap;
-  max-width: 800px;
+  max-width: 1000px;
+  width: 1536px;
   margin: 0 auto;
 }
 
@@ -489,7 +491,32 @@ transform:scale(0.9)
 .btn-onoff input:checked ~ span:after{
 content: '';
 left: 41px;
-}  
+} 
+
+.container_chart {
+    display: flex;
+    gap: 20px;
+    margin-left: -80px;
+    
+  }
+
+  .chart-container {
+    flex: 1;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    text-align: center;
+  }
+
+  #donut-chart {
+    width: 400px;
+    height: auto; 
+  }
+
+  #bar-chart {
+    width: 600px; 
+    height: 600px;
+  } 
 
 
 
