--- a/Consumer/rooms.css
+++ b/Consumer/rooms.css
@@ -380,17 +380,39 @@ ul.nav.nav-tabs li a:focus, ul.nav.nav-tabs li a:active {
   width: 240px;
   height: 160px;
   border-radius: 10px;
+  position: relative;
+  overflow: hidden;
+  opacity: 0.6;
+  transition: opacity 0.3s;
 }
 
-.boxes:hover {
-    opacity: 1;
-}
 .boxes-text {
-    color: rgb(0, 0, 0, 1); 
-    font-family:'Open Sans'; 
-    font-size: 24px; 
-    margin-top: -13px; 
-    font-weight: 600;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 10px;
+  box-sizing: border-box;
+  color: rgb(0, 0, 0);
+  font-family: 'Open Sans';
+  font-size: 18px;
+  font-weight: 600;
+  text-align: center;
+}
+  
+  .boxes:hover {
+    opacity: 1;
+  }
+  
+  .boxes img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 
 .boxes1 {
