--- a/Consumer/homepage.css
+++ b/Consumer/homepage.css
@@ -177,6 +177,7 @@ a:focus {
   padding: 4rem 0 0 8rem;
   display: flex;
   border-bottom-right-radius: 8px;
+  max-height: 700px; 
 }
 
 #timedate {
@@ -194,14 +195,15 @@ a:focus {
 #box{
    
   width: 1200px;
-  height: 200px;
+  height: 180px;
   background-color: rgba(248, 242, 242, 0.85);
   margin: auto;
   border-radius:20px;
   box-shadow: 5px 5px 6px rgb(18, 18, 18);
-  margin-top: 40px;
-  margin-left: -100px;
+  margin-top: 440px;
+  margin-left: -1150px;
   padding: 0px; 
+  max-height: 600px;
          
 } 
 .full-width-image {
@@ -368,6 +370,7 @@ ul.nav.nav-tabs li a:focus, ul.nav.nav-tabs li a:active {
   max-width: 1000px;
   width: 1536px;
   margin: 0 auto;
+  height: 100px; 
 }
 
 /* Boxes styles */
@@ -496,7 +499,8 @@ left: 41px;
 .container_chart {
     display: flex;
     gap: 20px;
-    margin-left: -80px;
+    margin-left: -20px;
+    max-height: 400px; 
     
   }
 
@@ -506,15 +510,17 @@ left: 41px;
     border: 1px solid #ccc;
     border-radius: 8px;
     text-align: center;
+    max-height: 600px; 
+    width:auto;
   }
 
   #donut-chart {
-    width: 400px;
+    width: 250px;
     height: auto; 
   }
 
   #bar-chart {
-    width: 600px; 
+    width: 1000px; 
     height: 600px;
   } 
 
